--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase": "^11.4.0",
     "pdfjs-dist": "^5.0.375",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
